Connected to AWS RDS instance

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 API_PORT=4001
 
-DB_USER=root
-DB_KEY=root
-DB_IP=localhost
-DB_NAME=test
+DB_USER=viewData
+DB_KEY='.Passw0rd'
+DB_IP='sqlexpress-db.cgw8firef2si.us-east-2.rds.amazonaws.com'
+DB_NAME=testing
 DB_TABLE=Auth
 
 TOKEN_KEY='num1sm4t1c4'
