--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.4.2",
+    "mysql2": "^3.4.2"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22"
   }
 }
